overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   padding: 0px;
   margin: 0px;
